rebar3 and improve benchmark

--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,13 @@
             %% warn_untyped_record
            ]}.
 
-{deps, [
+{profiles, [
+    {bench, [
+        {deps, [
+            {erlsom, "1.4.2"},
+            {fast_xml, "1.1.30"},
+            {exml, {git, "https://github.com/esl/exml.git", {ref, "5059e8f"}}}, %% rapidxml
+            {exomler, {git, "https://github.com/erlangbureau/exomler.git"}}
+        ]}
+    ]}
 ]}.
-
-{eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
